Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3776

traffic_server failed assert `s->current.server->had_connect_fail()`

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP

    Description

      Running latest build from github repo as of bug post.

      Error:
      traffic_server fatally terminates after traffic_manager spawns it, and then traffic_server gets automatically restarted.

      How to reproduce:
      -Set up ATS in a reverse proxy configuration, where the OS is some local http server.
      -Run 'bin/trafficserver start'
      -View stack trace in traffic.out

      Stack trace:

      [E. Mgmt] log ==> [TrafficManager] using root directory '/opt/ats'
      traffic_server: using root directory '/opt/ats'
      FATAL: HttpTransact.cc:3828: failed assert `s->current.server->had_connect_fail()`
      traffic_server: Aborted (Signal sent by tkill() 5398 99)traffic_server - STACK TRACE:
      /opt/ats/bin/traffic_server(crash_logger_invoke(int, siginfo*, void*)+0xc3)[0x4fd6f5]
      /lib64/libpthread.so.0(+0x3dd480f710)[0x2aad89487710]
      /lib64/libc.so.6(gsignal+0x35)[0x3dd4432625]
      /lib64/libc.so.6(abort+0x175)[0x3dd4433e05]
      /opt/ats/lib/libtsutil.so.6(Z12ink_fatal_vaPKcP13_va_list_tag+0x0)[0x2aad8900a851]
      /opt/ats/lib/libtsutil.so.6(ink_fatal(char const*, ...)+0x0)[0x2aad8900a908]
      /opt/ats/lib/libtsutil.so.6(ink_pfatal(char const*, ...)+0x0)[0x2aad8900a9cd]
      /opt/ats/lib/libtsutil.so.6(+0x3a44a)[0x2aad8900844a]
      /opt/ats/bin/traffic_server(HttpTransact::handle_server_connection_not_open(HttpTransact::State*)+0x1b5)[0x5fe39d]
      /opt/ats/bin/traffic_server(HttpTransact::handle_response_from_server(HttpTransact::State*)+0x3d2)[0x5fd49e]
      /opt/ats/bin/traffic_server(HttpTransact::HandleResponse(HttpTransact::State*)+0x6f5)[0x5fbd5b]
      /opt/ats/bin/traffic_server(HttpSM::call_transact_and_set_next_state(void (*)(HttpTransact::State*))+0x84)[0x5de85c]
      /opt/ats/bin/traffic_server(HttpSM::handle_server_setup_error(int, void*)+0x65a)[0x5d8894]
      /opt/ats/bin/traffic_server(HttpSM::state_read_server_response_header(int, void*)+0x217)[0x5cae5f]
      /opt/ats/bin/traffic_server(HttpSM::main_handler(int, void*)+0x270)[0x5cdddc]
      /opt/ats/bin/traffic_server(Continuation::handleEvent(int, void*)+0x6c)[0x50068e]
      /opt/ats/bin/traffic_server[0x76746a]
      /opt/ats/bin/traffic_server[0x76780a]
      /opt/ats/bin/traffic_server[0x767f7d]
      /opt/ats/bin/traffic_server(UnixNetVConnection::net_read_io(NetHandler*, EThread*)+0x2b)[0x76a2d9]
      /opt/ats/bin/traffic_server(NetHandler::mainNetEvent(int, Event*)+0x6de)[0x75f89e]
      /opt/ats/bin/traffic_server(Continuation::handleEvent(int, void*)+0x6c)[0x50068e]
      /opt/ats/bin/traffic_server(EThread::process_event(Event*, int)+0x136)[0x789c46]
      /opt/ats/bin/traffic_server(EThread::execute()+0x49b)[0x78a267]
      /opt/ats/bin/traffic_server(main+0x13ef)[0x53282a]
      /lib64/libc.so.6(__libc_start_main+0xfd)[0x3dd441ed5d]
      /opt/ats/bin/traffic_server[0x4e5ac9]
      traffic_server: using root directory '/opt/ats'
      

      Attachments

        Issue Links

          Activity

            People

              briang Brian Geffon
              danobi Daniel Xu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: