TS-3776: traffic_server failed assert s->current.server->had_connect_fail()