proxy/http/HttpTransact.cc
@@ -3658,7 +3658,8 @@ HttpTransact::handle_response_from_server(State *s)
     DebugTxn("http_trans",
              "[handle_response_from_server] Transaction received a bad response or a partial response, not retrying...");
     SET_VIA_STRING(VIA_DETAIL_SERVER_CONNECT, VIA_DETAIL_SERVER_FAILURE);
-    handle_server_connection_not_open(s);
+    handle_server_died(s);
+    s->next_action = SM_ACTION_SEND_ERROR_CACHE_NOOP;
     break;
   }
   case OPEN_RAW_ERROR:
